trying to solve a bug when using on iphone

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -39,7 +39,7 @@
   border-radius: 3rem;
 }
 
-@media only screen and (max-width: 960px) {
+@media screen and (max-device-width: 960px), screen and (max-width: 960px) {
   .about-container {
     flex-direction: column;
     padding: 0;
@@ -63,9 +63,5 @@
     width: 50%;
     margin: auto;
     margin-bottom: 25%;
-  }
-
-  .about-img > img {
-    width: 100%;
   }
 }
